fix overflow issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
   background-color: rgb(27, 27, 34);
+  overflow: hidden;
   width: 100%;
   height: 100vh;
   display: flex;
